--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost:5432}/${DB_NAME:postgres}
+spring.datasource.username=${DB_USER:postgres}
 # use your password
-spring.datasource.password=admin
+spring.datasource.password=${DB_PASSWORD:admin}
 # Hibernate ddl auto (create, create-drop, validate, update)
 
 
